# mediscan-iq

./: .env  .env.example  CTA_PE_high.txt  CXR_Normal_low.txt  CXR_Pneumonia_mod.txt  Echo_Effusion_mod.txt  HeadCT_SAH_high.txt  Mega_Discharge_long.txt  README.md  anonymized_example_radiology.txt  app_streamlit.py  pyproject.toml
sample_data/: example_radiology.txt
src/mediscan-iq/: api.py  cli.py  config.py  logging.py  schemas.py
src/mediscan-iq/nlp/: registry.py  risk_tagger.py  summarizer.py
src/mediscan-iq/preprocess/: anonymizer.py  segmenter.py
src/mediscan-iq/services/: analyze.py
tests/: test_anonymizer.py
