[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediscan-iq"
version = "0.2.0"
description = "MediScan-IQ — secure ingestion, PHI anonymization, summarization, and risk tagging for clinical text."
authors = [{name = "Abdulvahap Mutlu"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "regex>=2024.5.15",
  "nltk>=3.9.1",
  "langdetect>=1.0.9",
  "numpy>=1.26.0",
  "transformers>=4.44.0",
  # NOTE: If your platform has trouble resolving torch wheels, pin a known-good version for it.
  "torch>=2.2.0; platform_system!='Windows' or python_version<'3.13'",
  "accelerate>=0.33.0",
  "sentencepiece>=0.2.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
]

[project.scripts]
mediscan-iq = "mediscan_iq.cli:app"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]
src = ["src"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
strict_optional = true
plugins = []

[tool.setuptools.packages.find]
where = ["src"]
